@@ -1,0 +1,14 @@
+\documentclass{article}
+\usepackage[dvips]{color}
+\begin{document}
+\pagecolor{red}
+background red, black text
+\newpage
+{\color{blue}
+background red, blue text
+\newpage
+\pagecolor{white}
+background white, blue text}
+\newpage
+background white, black text
+\end{document}
